welcome.lessons.welcome.instructions.Instructions.scala.error
Program:2: error: value each is not a member of scala.collection.immutable.Range.Inclusive
(1 to 3) each {
         ^